--- a/Alphabetical_Substitution.ipynb
+++ b/Alphabetical_Substitution.ipynb
@@ -26,8 +26,8 @@
     "#### **Progress of Corresponding Report:**\n",
     "**-**\n",
     "\n",
-    "**Done?** **[ / ]**\n",
-    "//Half way\n",
+    "**Done?** **[x]**\n",
+    "",
     "\n",
     "### Alphabetical Substitution\n",
     "\n",
